crates/cli/tests/snapshots/check@non_struct_idx.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/non_struct_idx.nemo
input_file: crates/cli/tests/check/non_struct_idx.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[10] Error:[0m Tried to index into a non-struct type i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/non_struct_idx.nemo:2:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m.[0mx[38;5;249m;[0m
 [38;5;240m  │[0m      ┬  
 [38;5;240m  │[0m      ╰── Tried to index into a non-struct type i32
[38;5;246m───╯[0m

[31m[10] Error:[0m Tried to index into a non-struct type i32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/non_struct_idx.nemo:2:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m.[0my[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m
 [38;5;240m  │[0m         ┬  
 [38;5;240m  │[0m         ╰── Tried to index into a non-struct type i32
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 2 errors"
