crates/cli/tests/snapshots/check@not_a_function.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/not_a_function.nemo
input_file: crates/cli/tests/check/not_a_function.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[16] Error:[0m Can't a call a value of type i32 as a function
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/not_a_function.nemo:2:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0mx[38;5;249m([0m[38;5;249m0[0m[38;5;249m)[0m
 [38;5;240m  │[0m   ┬  
 [38;5;240m  │[0m   ╰── Can't a call a value of type i32 as a function
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 1 errors"
