crates/cli/tests/snapshots/check@operator_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/operator_type_mismatch.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/operator_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[03] Error:[0m Invalid operator + for lhs of type I32 and rhs of type F32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/operator_type_mismatch.nemo:2:6[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m [0m+[38;5;249m [0m[38;5;249m2[0m[38;5;249m.[0m[38;5;249m0[0m
 [38;5;240m  │[0m      ┬  
 [38;5;240m  │[0m      ╰── Invalid operator + for lhs of type I32 and rhs of type F32
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 1 errors"
