crates/cli/tests/snapshots/check@pattern_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/pattern_type_mismatch.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/pattern_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[20] Error:[0m This pattern can't match a value of type I32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/pattern_type_mismatch.nemo:7:5[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0mV::S _[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m}[0m
 [38;5;240m  │[0m     ───┬──  
 [38;5;240m  │[0m        ╰──── This pattern can't match a value of type I32
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 1 errors"
