crates/cli/tests/snapshots/check@type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/type_mismatch.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[15] Error:[0m Type mismatch. Expected I32, but got F32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/type_mismatch.nemo:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mI[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m10.0
 [38;5;240m  │[0m                  ──┬─  
 [38;5;240m  │[0m                    ╰─── Type mismatch. Expected I32, but got F32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected I32, but got F32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/type_mismatch.nemo:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249my[0m[38;5;249m_[0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m([0m[38;5;249mI[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mI[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m\[0m[38;5;249m([0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mF[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0mF32 [38;5;249m{[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m                                                ──┬─  
 [38;5;240m  │[0m                                                  ╰─── Type mismatch. Expected I32, but got F32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected I32, but got F32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/type_mismatch.nemo:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249my[0m[38;5;249m_[0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m([0m[38;5;249mI[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mI[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m\[0m[38;5;249m([0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0mF32[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mF[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m                                        ─┬─  
 [38;5;240m  │[0m                                         ╰─── Type mismatch. Expected I32, but got F32
[38;5;246m───╯[0m

[31m[15] Error:[0m Type mismatch. Expected I32, but got F32
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/type_mismatch.nemo:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249my[0m[38;5;249m_[0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m([0m[38;5;249mI[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mI[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m\[0m[38;5;249m([0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mF[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mF[0m[38;5;249m3[0m[38;5;249m2[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0mx [38;5;249m}[0m
 [38;5;240m  │[0m                                                      ─┬  
 [38;5;240m  │[0m                                                       ╰── Type mismatch. Expected I32, but got F32
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 4 errors"
