crates/cli/tests/snapshots/check@unknown_field.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_field.nemo
input_file: crates/cli/tests/check/unknown_field.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[13] Error:[0m Unknown field. F does not have a field named y
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:2[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mF[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[38;5;249m [0my[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m2[0m[38;5;249m0[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m.[0m[38;5;249my[0m[38;5;249m;[0m
 [38;5;240m  │[0m               ┬  
 [38;5;240m  │[0m               ╰── Unknown field. F does not have a field named y
[38;5;246m───╯[0m

[31m[13] Error:[0m Unknown field. F does not have a field named y
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:2[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mF[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249my[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m2[0m[38;5;249m0[0m[38;5;249m [0m[38;5;249m}[0m[38;5;249m.[0my[38;5;249m;[0m
 [38;5;240m  │[0m                        ┬  
 [38;5;240m  │[0m                        ╰── Unknown field. F does not have a field named y
[38;5;246m───╯[0m

[31m[13] Error:[0m Unknown field. F does not have a field named y
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:2:2[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m8 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249m.[0my[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m2[0m[38;5;249m0[0m[38;5;249m;[0m
 [38;5;240m  │[0m         ┬  
 [38;5;240m  │[0m         ╰── Unknown field. F does not have a field named y
[38;5;246m───╯[0m

Error: "Check failed with 3 errors"
