crates/cli/tests/snapshots/check@unknown_module.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_module.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_module.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[Parsing error] Error:[0m Unknown module 'unknown'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/unknown_module.nemo:4:5[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249mu[0m[38;5;249ms[0m[38;5;249me[0m[38;5;249m [0m[38;5;81mu[0m[38;5;81mn[0m[38;5;81mk[0m[38;5;81mn[0m[38;5;81mo[0m[38;5;81mw[0m[38;5;81mn[0m
 [38;5;240m  │[0m     [38;5;81m─[0m[38;5;81m─[0m[38;5;81m─[0m[38;5;81m┬[0m[38;5;81m─[0m[38;5;81m─[0m[38;5;81m─[0m  
 [38;5;240m  │[0m        [38;5;81m╰[0m[38;5;81m─[0m[38;5;81m─[0m[38;5;81m─[0m[38;5;81m─[0m[38;5;81m─[0m Unknown module 'unknown'
[38;5;246m───╯[0m



----- stderr -----
Error: "Check failed with 1 errors"
