crates/cli/tests/snapshots/check@unknown_struct.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_struct.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_struct.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[07] Error:[0m Unknown type Unknown
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/unknown_struct.nemo:2:11[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mUnknown[38;5;249m [0m[38;5;249m{[0m[38;5;249m}[0m
 [38;5;240m  │[0m           ───┬───  
 [38;5;240m  │[0m              ╰───── Unknown type Unknown
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 1 errors"
