crates/cli/tests/snapshots/check@unknown_var.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_var.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_var.nemo
---
success: false
exit_code: 1
----- stdout -----
[31m[05] Error:[0m Unknown variable unknown
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/unknown_var.nemo:2:3[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0munknown[38;5;249m;[0m
 [38;5;240m  │[0m   ───┬───  
 [38;5;240m  │[0m      ╰───── Unknown variable unknown
[38;5;246m───╯[0m

[31m[05] Error:[0m Unknown variable unknown
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/unknown_var.nemo:4:7[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0munknown[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m3[0m[38;5;249m;[0m
 [38;5;240m  │[0m       ───┬───  
 [38;5;240m  │[0m          ╰───── Unknown variable unknown
[38;5;246m───╯[0m

[31m[05] Error:[0m Unknown variable unknown
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/check/unknown_var.nemo:5:7[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0munknown[38;5;249m.[0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m3[0m
 [38;5;240m  │[0m       ───┬───  
 [38;5;240m  │[0m          ╰───── Unknown variable unknown
[38;5;246m───╯[0m


----- stderr -----
Error: "Check failed with 3 errors"
